--- a/creditRating/CMakeLists.txt
+++ b/creditRating/CMakeLists.txt
@@ -16,12 +16,13 @@ else()
         PUBLIC OPENFHEbinfhe
     )
 endif()
-
 cmake_minimum_required(VERSION 3.16)
 
 project(credit VERSION 0.1 LANGUAGES CXX)
 
 set(CMAKE_AUTOUIC ON)
+set(CMAKE_AUTOMOC ON)
+set(CMAKE_AUTORCC ON)
 
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
@@ -34,8 +35,6 @@ set(PROJECT_SOURCES
         mainwindow.cpp
         mainwindow.h
         mainwindow.ui
-        DataProcessor.cpp
-        # 여기에 각자의 프로그램 추가하기
 )
 
 if(${QT_VERSION_MAJOR} GREATER_EQUAL 6)
@@ -61,12 +60,9 @@ else()
     endif()
 endif()
 
-target_link_libraries(credit
-    PUBLIC OPENFHEcore
-    PUBLIC OPENFHEpke
-    PUBLIC OPENFHEbinfhe
-    PRIVATE Qt${QT_VERSION_MAJOR}::Widgets
-)
+target_link_libraries(credit 
+PRIVATE Qt${QT_VERSION_MAJOR}::Widgets)
+
 # Qt for iOS sets MACOSX_BUNDLE_GUI_IDENTIFIER automatically since Qt 6.1.
 # If you are developing for iOS or macOS you should consider setting an
 # explicit, fixed bundle identifier manually though.
